# Polygon_data_Indexer

./: .env  .gitignore  Cargo.toml  README.md  polygon_indexer.db  polygon_indexer.db-shm  polygon_indexer.db-wal
.sqlx/: query-38ad00c8166fcdc9fa4a57f189b1c86804508e717b846370c1e4c7ba059b192c.json  query-6da60b388f9aebde2d1fccc9b6dc505d772727ceccd2281685e30a537e337a88.json  query-7692dd714f34184c1fe69344ec5dca5a1adb8576d2b35b944f22ad8be8111d75.json  query-e478edb880cc33524617f570d9489e4a90ee7ecb4ae7f051fc680c7bbb3a60d8.json
migrations/: 20250911123916_create_tables.sql
src/: db.rs  main.rs  query_tool.rs
