[package]
name = "polygon_data_indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
ethers-core = "2.0"
ethers-providers = "2.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
dotenvy = "0.15"
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
chrono = "0.4"

[[bin]]
name = "query_tool"
path = "src/query_tool.rs"